$Id$


Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V3.4h
~~~~~~~~~~~~~~~~

  o bugfix for mixer map: wrong events were sent via IIC3 and IIC4 port


MIDIboxSEQ V3.4g
~~~~~~~~~~~~~~~~

  o gate outputs support legato properly now


MIDIboxSEQ V3.4f
~~~~~~~~~~~~~~~~

  o built for MIOS V1.9g (or higher) to support new encoder types.
    Rotary encoders won't work with older MIOS versions!

  o Groove function now takes the global step has reference instead of the local step.
    This results into better results on a non-linear step progression.

  o Bank of group #1-#4 can now be selected via CC#116..CC#119

  o due to various user requests, the previously introduced "set/clear all trigger"
    function has been disabled by default.
    It can be enabled again with the DEFAULT_BEH_ALL_WITH_TRIGGERS switch in setup_*.asm
    0: only parameter layers are modified by ALL function
    1: all trigger and parameter layers are modified by ALL function


MIDIboxSEQ V3.4e
~~~~~~~~~~~~~~~~

  o corrected Synch To Measure function


MIDIboxSEQ V3.4d
~~~~~~~~~~~~~~~~

  o In Slave Mode the sequencer won't switch to Master mode when the Play button is pushed. This automatic switching is only available in Auto Mode anymore.


MIDIboxSEQ V3.4c
~~~~~~~~~~~~~~~~

  o Trigger Layer B and C wasn't displayed correctly in step display S17-32 anymore


MIDIboxSEQ V3.4b
~~~~~~~~~~~~~~~~

  o pattern selection wasn't working correctly in song mode anymore (first pattern was skipped)


MIDIboxSEQ V3.4a
~~~~~~~~~~~~~~~~

  o Mutes can now be changed simultaneously by pressing SELECT button while selecting
    the track(s) with GP buttons in MUTE page.
    Changes will take place when SELECT button released.

  o Initial cursor position changed to "Pos" in SONG page

  o the optional Copy/Paste/Clear buttons now do operations on Mixer maps instead of
    the track in Mixer page


MIDIboxSEQ V3.4
~~~~~~~~~~~~~~~
